# algorithm

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Dockerfile  LICENSE.md  MODULE.bazel  README.md  WORKSPACE  pom.xml
.github/workflows/: maven.yml
agent-mcp/: pom.xml
agent-mcp/src/main/java/cn/cstn/algorithm/mcp/: McpServerApplication.java
agent-mcp/src/main/java/cn/cstn/algorithm/mcp/annotation/: McpToolProvider.java
agent-mcp/src/main/java/cn/cstn/algorithm/mcp/config/: McpMySqlProperties.java  McpToolAutoConfiguration.java  MysqlConnectionManager.java
agent-mcp/src/main/java/cn/cstn/algorithm/mcp/support/: QueryResult.java  SqlValidator.java
agent-mcp/src/main/java/cn/cstn/algorithm/mcp/tool/: MySqlAnalysisTool.java  MySqlMcpTool.java  TemplateMcpTool.java
agent-mcp/src/main/resources/: application.yml  logback-spring.xml
bazel/: BUILD.bazel  algo.bzl  build.cmd  build.sh  repositories.bzl
bazel/patches/: libtommath.patch  yacl.patch
commons/: pom.xml
commons/src/main/java/cn/cstn/algorithm/commons/: KV.java  Node.java  Search.java  Sort.java  Tuple.java  UF.java  UnionFind.java
commons/src/main/java/cn/cstn/algorithm/commons/enums/: PeriodTypeEnum.java
commons/src/main/java/cn/cstn/algorithm/commons/graph/: DFA.java  MUF.java  UF2D.java
commons/src/main/java/cn/cstn/algorithm/commons/list/: ListNode.java
commons/src/main/java/cn/cstn/algorithm/commons/math/: Point.java
commons/src/main/java/cn/cstn/algorithm/commons/state/: State.java
commons/src/main/java/cn/cstn/algorithm/commons/tree/: BiTreeNode.java  TreeNode.java
commons/src/main/java/cn/cstn/algorithm/commons/util/: ArrayHelper.java  ArrayUtil.java  BeanUtil.java  CollectionUtil.java  DateTimeUtil.java  Math.java  MathUtil.java  Search.java  Sort.java  StringUtil.java  UF.java
commons/src/main/resources/: logback.xml
commons/src/test/java/cn/cstn/algorithm/commons/: App.java
commons/src/test/java/cn/cstn/algorithm/commons/test/: App.java  AppTest.java  ArrayTest.java  CollectionTest.java  MathTest.java  SearchTest.java  SortTest.java  UFTest.java
corporation/: pom.xml
corporation/src/main/java/cn/cstn/algorithm/corporation/bytedance/: AirQuality.java  ArticleIllFormedSent.java  CooperationGame.java  CreditsCardGame.java  IntervalMaxMin.java  LegalExpression.java  LiveBroadcastFan.java  PairsOfWords.java  SubtractionEvaluate.java  WorldCup.java  WorldCupOpeningCeremony.java  Xor.java
leetcode/: README.md  pom.xml
leetcode/src/main/java/cn/cstn/leetcode/binarySearch/: MountainArray.java
leetcode/src/main/java/cn/cstn/leetcode/string/: JudgeCircle.java
leetcode/src/main/java/cn/cstn/leetcode/util/: ArrayHelper.java
leetcode/src/test/java/cn/cstn/algorithm/leetcode/: App.java  UFTest.java
logs/: Expr.java
native/: pom.xml
native/src/main/java/cn/cstn/algorithm/javacpp/: MyFunc.java  MyFuncTest.java  NativeDemo.java
native/src/main/native/: build.sh
native/src/main/native/cn/cstn/algorithm/javacpp/: BUILD.bazel  func.cpp  func.h  func_test.cpp  test.cpp
native/src/main/native/cn/cstn/algorithm/javacpp/api/: BUILD.bazel  heu_api.cc  heu_api.h  heu_test.cc
native/src/main/native/cn/cstn/algorithm/javacpp/bench/: BUILD.bazel  phe_bench.cc
native/src/main/native/cn/cstn/algorithm/javacpp/heu/: BUILD.bazel  ecc_factory.h  he_buffer.h  he_types.h  phe_kit.cc  phe_kit.h  phe_kit_test.cc
native/src/main/native/cn/cstn/algorithm/javacpp/tests/: BUILD.bazel  gmp_test.cc  omp_test.cc
native/src/main/native/cn/cstn/algorithm/javacpp/util/: utils.h  (+2 more)
native/src/test/java/cn/cstn/algorithm/: AppTest.java  PheKitTest.java
offer/: pom.xml
offer/src/main/java/cn/cstn/algorithm/offer/: BiTreeLevelOrder.java  BiTreePathSum.java  BiTreePostOrder.java  BuildTree.java  CQueue.java  Codec.java  CopyRandomList.java  CountDigitOne.java  CountTargetInSortedArr.java  CuttingRope.java  DeleteNode.java  Fib.java  FindNthDigit.java  FindNumberIn2DArray.java  FindRepeatNumber.java  FirstUniqChar.java  HammingWeight.java  IntersectionNode.java  IsNumber.java  LeastNumbers.java  LinkedListKthFromEnd.java  ListNode.java  LongestSubstring.java  MajorityElement.java  MaxSubArray.java  MaxValue.java  MedianFinder.java  MergeTwoLists.java  MinArray.java  MinNumber.java  MinStack.java  MirrorTree.java  MissingNumber.java  MovingCount.java  MyPow.java  NumWays.java  OddEvenSort.java  PathInMatrix.java  PrintNumbers.java  ReExp.java  (+12 more)
python/: config.yml  ecc.py  libsvm2csv.py  libsvm_splits.py  llm_pipe.py  pulsar_cli.py  requirements.txt  utils.py
python/crawler/53banxue/: ebook_detail.html  main.py
security/: pom.xml
security/src/test/java/cn/cstn/algorithm/: AppTest.java
shell/: README.md  config_nginx.nginx  gencert.sh  hfd.sh  pdf2eps  pdf2eps.sh  rcmd  rcmd.sh  wait-for
shell/cert_https/: xxx.yyy.key  xxxx.pem
shell/nginx/: config_httpd.httpd  nginx.conf  proxy.conf
src/main/java/cn/cstn/leetcode/array/: FlipAndInvertImage.java
src/main/java/cn/cstn/leetcode/linkedlist/: MiddleNode.java
src/main/java/cn/cstn/leetcode/math/: DividingNumbers.java
src/main/java/cn/cstn/leetcode/string/: LowerCase.java  MorseRepresentations.java
tests/: pom.xml
tests/src/main/java/cn/cstn/algorithm/: App.java
tests/src/main/resources/: application.yml
tests/src/test/java/cn/cstn/algorithm/: AppTest.java
workclaw/: pom.xml
workclaw/frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
workclaw/frontend/src/: App.vue  api.js
workclaw/frontend/src/assets/: index.css
workclaw/frontend/src/components/: ChatView.vue  McpConfigView.vue  SkillConfigView.vue  app-sidebar.vue
workclaw/frontend/src/components/ui/: badge.vue  button.vue  card.vue  checkbox.vue  dialog.vue  input.vue  label.vue  select.vue  separator.vue  textarea.vue
workclaw/frontend/src/composables/: use-theme.js
workclaw/frontend/src/router/: index.js
workclaw/frontend/src/views/: ChatView.vue  McpConfigView.vue  SkillConfigView.vue
workclaw/src/main/java/cn/cstn/algorithm/workclaw/: WorkClawApplication.java
workclaw/src/main/resources/: application.yml
(+91 files in other folders)
