"""Bazel build and test dependencies."""

# NOTE: When editing this file, also update the lockfile.
#   bazel mod deps --lockfile_mode=update

module(
    name = "algo",
    repo_name = "algorithm",
)

# =========================================
# Bazel module dependencies
# =========================================

#bazel_dep(name = "rules_cc", version = "0.0.13")
