"""Bazel build and test dependencies."""

# NOTE: When editing this file, also update the lockfile.
#   bazel mod deps --lockfile_mode=update

module(
    name = "algo",
    repo_name = "algorithm",
)

# =========================================
# Bazel module dependencies
# =========================================

#bazel_dep(name = "rules_cc", version = "0.0.14")
#bazel_dep(name = "gflags", version = "2.2.2")
#bazel_dep(name = "zlib", version = "1.3.1")
#bazel_dep(name = "protobuf", version = "21.7")
#bazel_dep(name = "abseil-cpp", version = "20240722.0")
#bazel_dep(name = "fmt", version = "11.0.2")
#bazel_dep(name = "spdlog", version = "1.14.1")
#bazel_dep(name = "googletest", version = "1.15.2")
#bazel_dep(name = "google_benchmark", version = "1.8.5")
#bazel_dep(name = "blake3", version = "1.5.4")
#bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
#bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
#bazel_dep(name = "bazel_features", version = "1.20.0")
#bazel_dep(name = "msgpack-c", version = "6.1.0")
