"""Bazel build and test dependencies."""

# NOTE: When editing this file, also update the lockfile.
#   bazel mod deps --lockfile_mode=update

module(
    name = "algo",
    version = "1.0.2",
    compatibility_level = 1,
)

# =========================================
# Bazel module dependencies
# =========================================
# --registry=https://bcr.bazel.build
bazel_dep(name = "apple_support", version = "1.17.1")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "rules_cc", version = "0.0.13")
bazel_dep(name = "rules_cuda", version = "0.2.3")
bazel_dep(name = "spdlog", version = "1.14.1")

# --registry=https://raw.githubusercontent.com/dtera/bazel-registry/main
bazel_dep(name = "com_dtera_gmp", version = "6.3.0")
bazel_dep(name = "com_dtera_heu", version = "0.5.1")
bazel_dep(name = "com_dtera_libtommath", version = "20250114-42b3fb0")

# test
bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.5", dev_dependency = True)

# new_local_repository
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "macos_omp_x64",
    build_file = "@algo//bazel/third_party:local_openmp_macos.BUILD",
    path = "/usr/local/opt/libomp",
)

new_local_repository(
    name = "macos_omp_arm64",
    build_file = "@algo//bazel/third_party:local_openmp_macos.BUILD",
    path = "/opt/homebrew/opt/libomp/",
)
