# Copyright 2024 dterazhao, Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:algo.bzl", "algo_cc_library", "algo_cc_test")

test_suite(
    name = "api_tests",
)

algo_cc_library(
    name = "api",
    srcs = ["heu_api.cc"],
    hdrs = ["heu_api.h"],
    deps = [
        "//native/src/main/native/cn/cstn/algorithm/javacpp/util:utils",
        "@com_dtera_heu//heu/library/phe",
    ],
)

algo_cc_test(
    name = "heu_test",
    srcs = ["heu_test.cc"],
    deps = [
        ":api",
    ],
)
